--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Adicionando mensagens de log
         run: |
-          echo "::debug:: Mensagem de log (debug1)"
+          echoo "::debug:: Mensagem de log (debug1)"
           echo "::debug:: Mensagem de log (debug2)"
           echo "::debug:: Mensagem de log (debug3)"
           echo "::notice:: Mensagem de log (notice)"
